<resources>
    <string name="app_name">真人视频交友</string>
    <string name="str_login">登\t\t录</string>
    <string name="str_register">注\t\t册</string>
    <string name="str_register_sender">提\t\t交</string>
    <string name="str_input_account_hint">请输入手机号或邮箱</string>
    <string name="str_login_password_hint">请填写密码</string>
    <string name="str_login_password_truthhint">请填写确认密码</string>
    <string name="str_login_forget">忘记密码？</string>
    <string name="str_login_find">点此找回</string>
    <string name="str_login_password_check">记住密码</string>
    <string name="str_auto_login">自动登录</string>
    <string name="str_register_age">选择您的性别</string>
    <string name="str_register_end">完\t成</string>
    <string name="str_video_recorder">上传视频秀</string>
    <string name="str_qq_login">QQ登录</string>
    <string name="str_mob_login">手机号登录</string>
    <string name="str_new_register">新用户注册</string>
    <string name="str_login_register">注册/登录</string>
    <string name="str_register_perror">密码不正确</string>
    <string name="str_register_nickerror">该用户不存在</string>
    <string name="str_register_accept">通过注册，即表示接受</string>
    <string name="str_register_protocol">有缘网络使用协议</string>
    <string name="str_user_pas_not_null">用户名或密码不能为空</string>
    <string name="str_user_not_null">用户名不少于6位</string>
    <string name="str_exit">再按一次退出本程序</string>
    <string name="str_net_error">亲，不开启网络无法与TA沟通哦~</string>
    <string name="str_open_net">请打开网络</string>
    <string name="str_open_onnet">网络连接中</string>
    <string name="str_intro_call">打招呼成功，随意逛逛等待TA回信！</string>
    <string name="str_yuanfen">缘分</string>
    <string name="str_recommend">推荐</string>
    <string name="str_nearby">附近</string>
    <string name="str_beautiful">美套图</string>
    <string name="str_limitshow">身材秀</string>
    <string name="str_limitshow_browse">身材秀浏览</string>
    <string name="str_discovery">VIP</string>
    <string name="str_inbox">消息</string>
    <string name="str_reply">评论</string>
    <string name="str_task">任务</string>
    <string name="str_request_more">求更多</string>
    <string name="str_request_success">发送成功</string>
    <string name="str_request_fail">发送失败</string>
    <string name="str_admin">管理员</string>
    <string name="str_gift">送礼</string>
    <string name="str_chat">聊天</string>
    <string name="str_mine">我</string>
    <string name="str_sui">岁</string>
    <string name="str_condition">按条件查询</string>
    <string name="str_address">北京</string>
    <string name="str_age">年龄不限</string>
    <string name="str_height">身高不限</string>
    <string name="str_salary">薪资不限</string>
    <string name="str_heightuntil">cm</string>
    <string name="str_salaryuntil">月薪:</string>
    <string name="str_yuan">元</string>
    <string name="str_iconuntil">张图片</string>
    <string name="str_sayhello">打招呼</string>
    <string name="str_net_null">数据加载失败,请刷新</string>
    <string name="str_net_fail">网络连接提示</string>
    <string name="str_net_register">网络不稳定,请重试</string>
    <string name="str_net_again">重    试</string>
    <string name="str_money">财富:</string>
    <string name="str_lookme">谁看过我</string>
    <string name="str_lookother">悲催了...还没有人看你	\n抢先去看看别人吧~</string>
    <string name="str_myphoto">我的相册</string>
    <string name="str_bridgeset">征友设置</string>
    <string name="str_myinfo">我的资料</string>
    <string name="str_setting">个人设置</string>
    <string name="str_buyvip">购买VIP</string>
    <string name="str_buycoin">免费赚会员</string>
    <string name="str_editavatar">修改头像</string>
    <string name="str_editnick">我的昵称</string>
    <string name="str_editnicktitle">修改昵称</string>
    <string name="str_system_list">系统消息</string>
    <string name="str_edit">修改</string>
    <string name="str_editinfo">帐号信息</string>
    <string name="str_look">查看</string>
    <string name="str_inputnick">请输入昵称</string>
    <string name="str_inputgender">请选择性别</string>
    <string name="str_change">修    改</string>
    <string name="str_cancel">取    消</string>
    <string name="str_close">关    闭</string>
    <string name="str_sure">确    定</string>
    <string name="str_delete">删    除</string>
    <string name="str_username">用户名:</string>
    <string name="str_password">密&#160;&#160;&#160;&#160;码:</string>
    <string name="str_takecare">请妥善保管您的登录信息</string>
    <string name="str_uploadtitle">上传照片</string>
    <string name="str_checklogin">正在登陆验证...</string>
    <string name="str_network_request">正在网络请求...</string>
    <string name="str_oppositeheight">身高:</string>
    <string name="str_userreport">举报</string>
    <string name="str_task1">免费赚金币/任务一区</string>
    <string name="str_task2">免费赚金币/任务二区</string>
    <string name="str_sdnull">请检查SD卡是否存在。</string>
    <string name="str_mine_title">我的资料</string>
    <string name="str_mine_word">/50</string>
    <string name="str_mine_save">保存</string>
    <string name="str_mine_hearthint">你还没有填写个性签名哦,快向大家介绍一下你自己吧~</string>
    <string name="str_mine_nickname">昵称:</string>
    <string name="str_mine_birthday">生日:</string>
    <string name="str_register_gender">性别:</string>
    <string name="str_register_nickname">昵\t\t称:</string>
    <string name="str_register_pw">输入密码:</string>
    <string name="str_register_truthpw">确认密码:</string>
    <string name="str_register_send">提交</string>
    <string name="str_register_num">手机号码:</string>
    <string name="str_mine_secret">联系信息(不公开显示)</string>
    <string name="str_mine_tel">号码:</string>
    <string name="str_mine_ad">地址:</string>
    <string name="str_mine_alipay">收款:</string>
    <string name="str_mine_hint_alipay">请输入支付宝帐号</string>
    <string name="str_setting_certifiy">认证</string>
    <string name="str_setting_changepassword">修改密码</string>
    <string name="str_setting_change">修改</string>
    <string name="str_setting_pushsetting">推送通知</string>
    <string name="str_setting_clearcache">清理缓存</string>
    <string name="str_setting_pushset">设置</string>
    <string name="str_reply_who">回复</string>
    <string name="str_setting_checkupdate">版本更新</string>
    <string name="str_setting_check">查看</string>
    <string name="str_setting_switchaccour">切换用户</string>
    <string name="str_setting_push_hint">推送通知设置</string>
    <string name="str_setting_push_time">接收时段设置：</string>
    <string name="str_setting_push_notify">是否开启通知：</string>
    <string name="str_changepwd">修改密码</string>
    <string name="str_changepwd_old">当前账户密码</string>
    <string name="str_changepwd_new">请输入新密码</string>
    <string name="str_changepwd_success">修改成功</string>
    <string name="str_changepwd_sample">不能与原密码相同</string>
    <string name="str_version_title">版本信息</string>
    <string name="str_version_currentversion">已是最新版本</string>
    <string name="str_version_newtversion">发现新版本</string>
    <string name="str_version_down">下    载</string>
    <string name="str_register_success">恭喜您注册成功!</string>
    <string name="str_nickname_tip1">昵称不能为空</string>
    <string name="str_nickname_tip2">不能包含特殊字符</string>
    <string name="str_del_account_title">删除账号</string>
    <string name="str_del_account_sure">确定删除此账号：</string>
    <string name="str_man_default_nickname">男士</string>
    <string name="str_woman_default_nickname">女士</string>
    <string name="str_date_null">暂无数据</string>
    <string name="str_exchange_title">兑换信息</string>
    <string name="str_exchange_numhint">最多兑换99件</string>
    <string name="str_exchange_loading">正在兑换中...</string>
    <string name="str_exchange_numerror">选择商品件数大于0件</string>
    <string name="str_exchange_error">您的金币不足,快去赚取金币吧~</string>
    <string name="str_excharm_error">您的魅力值不足,快去赚取魅力值吧~</string>
    <string name="str_excharm_fail">兑换失败,请重试</string>
    <string name="str_exchange_success">兑换成功</string>
    <string name="str_talk_hua">话</string>
    <string name="str_register_back">返\t\t回</string>
    <string name="str_register_message">注册信息:</string>
    <string name="str_daysign">每日签到</string>
    <string name="str_signin">领\t\t取</string>
    <string name="str_signsuccess">领取成功</string>
    <string name="str_signed">你今天已经领取过了！</string>
    <string name="str_sign_end">已 领 取</string>
    <string name="str_talk_vip">回复并向TA索要联系方式</string>
    <string name="str_fate_likenum">人喜欢TA</string>
    <string name="str_my_nvshenxiu">女神秀</string>
    <string name="str_my_nanshenxiu">男神秀</string>
    <string name="str_my_detailnv">女神秀详细</string>
    <string name="str_my_detailnan">男神秀详细</string>
    <string name="str_detailvideo">视频秀详细</string>
    <string name="str_my_shencaixiu">身材秀套图</string>
    <string name="str_my_shipinxiu">视频秀</string>
    <string name="str_my_ziliao">我的资料</string>
    <string name="str_my_nearlyvisitor">最近来访</string>
    <string name="str_my_liwu">收到的礼物</string>
    <string name="str_my_more">更多</string>
    <string name="str_my_gift">礼物</string>
    <string name="str_my_fans">粉丝</string>
    <string name="str_my_charm">魅力:\t</string>
    <string name="str_find_task">免费领金币</string>
    <string name="str_find_send">免费賺取金币或充值>></string>
    <string name="str_find_chongzhi">VIP充值</string>
    <string name="str_find_sign">签到送金币</string>
    <string name="str_find_store">魅力商城</string>
    <string name="str_meili_btn">立即兑换</string>
    <string name="str_meili_cankao">参考价:</string>
    <string name="str_meili_dui">兑换价:</string>
    <string name="str_meili">魅力</string>
    <string name="str_meili_num">数量:</string>
    <string name="str_meili_sum">总价格:</string>
    <string name="str_rechangecoin">免费賺取金币</string>
    <string name="str_rechangevip">购买服务</string>
    <string name="str_hot">最热门</string>
    <string name="str_supervip">超级VIP</string>
    <string name="str_taskfree">做任务免费赚金币</string>
    <string name="str_meili_sure">确定兑换</string>
    <string name="str_gift_de">的礼物</string>
    <string name="str_top_sheng">升VIP</string>
    <string name="str_top_chong">VIP充值</string>
    <string name="str_top_putong">(普通会员)</string>
    <string name="str_top_super">(VIP会员)</string>
    <string name="str_chatmsg_hint">输入消息内容</string>
    <string name="str_intro_say">个性签名</string>
    <string name="str_personal_guanzhu">关注</string>
    <string name="str_personal_add">关注成功</string>
    <string name="str_personal_cancle">取消关注</string>
    <string name="str_personal_addfail">关注失败</string>
    <string name="str_personal_canclefail">取消关注失败</string>
    <string name="str_personal_xiu">专属秀</string>
    <string name="str_inbox_newcomment">最新评论</string>
    <string name="str_inbox_praiselist">求更多列表</string>
    <string name="str_personal_like">已关注</string>
    <string name="str_personal_unlike">是否把该用户从关注列表删除?</string>
    <string name="str_inbox_deldialogleft">删除\"</string>
    <string name="str_inbox_deldialogright">\"发来的消息?</string>
    <string name="str_personal_unjia">是否将该用户移出黑名单?</string>
    <string name="str_lastvisitor">最近访客</string>
    <string name="str_store">礼物商城</string>
    <string name="str_send">发    布</string>
    <string name="str_send_null">填写的信息不能为空</string>
    <string name="str_exit_main">你确定退出吗?</string>
    <string name="str_exit_text1">这里有1200万女性用户\n这里有360万女性自拍视频\n这里有4500万真实照片</string>
    <string name="str_exit_text2">在这里你可以找到心仪的对象，不用\n再去约炮啦，找个稳定的妹纸不是更好么\n找个妹纸聊天仅需20元送你大量金币和妹纸\n聊天去吧 </string>
    <string name="str_action_rules">活动规则</string>
    <string name="str_rules1">1、普通用户签到7天可刮奖一次</string>
    <string name="str_rules2">2、VIP用户签到1天可刮奖一次</string>
    <string name="str_rules3">3、所有用户均100%中奖</string>
    <string name="str_pay_warningtitle">警告</string>
    <string name="str_pay_warningtext">严禁未满18岁人士使用本物品；不可将本物品内容派发，传阅，出售，出租，交给会借予年龄未满18岁的人士出示，播放或播映。\n\nThis article may be objectionable content; not the content of the articles distributed, circulated, sold, rented, will be lent to persons under the age of 18 years to produce, broadcast or broadcast.\n\n本物品供个人自由使用，无意与任何一个国家或地区的法律相抵触亦无任何政治倾向，但请遵守本物品注册地只法律，所有个人言论不代表本物品立场，与本物品立场无关，资费贰拾元，本物品不对其内容负责，假若内容涉及侵权，请立即联络我们，我们将立即删除，并向所有持版权者致最深的歉意。\n\n本物品内容受美国法律保护，网站在美国进行维护，内容收集于全世界互联网。\n\n友情提示：请勿长时间观看影视，注意保护视力并预防近视，合理安排时间，享受健康生活。\n客服电话4008812666。</string>
	<string name="str_press_warning">—满18岁，点这里—</string>
</resources>