<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_whitetext"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_dialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:text="@string/str_exit_main"
        android:textColor="@color/red"
        android:textSize="18dip" 
        android:textStyle="bold"/>

    <TextView style="@style/layout_full_wrap"
        android:text="@string/str_exit_text1"
        android:paddingLeft="15dip"
        android:textColor="@color/red"/>
    
    <TextView style="@style/layout_full_wrap"
        android:text="@string/str_exit_text2"
        android:layout_marginTop="10dip"
        android:paddingLeft="15dip"
        android:id="@+id/tv_exit2"
        android:textColor="@color/darkyellow"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:padding="5dip" >

        <Button
            android:id="@+id/btn_dialog_sure"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/lightblue"
            android:padding="10dip"
            android:text="@string/str_sure"
            android:textColor="@color/white"
            android:textSize="15dip" />
    </LinearLayout>

</LinearLayout>