<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightgray" >
    
	<include layout="@layout/basic_top"/>
	
	<ImageView style="@style/layout_full_wrap"
	    android:id="@+id/img_prize_ad"
	    android:adjustViewBounds="true"
	    android:scaleType="centerCrop"
	    android:background="@drawable/default_female"/>
	
	<TextView style="@style/layout_wrap"
	    android:padding="10dip"
	    android:text="@string/str_action_rules"
	    android:textColor="@color/black"
	    android:textSize="20dip"
	    android:layout_marginLeft="20dip"
	    android:layout_marginTop="20dip"/>
	<TextView style="@style/layout_wrap"
	    android:text="@string/str_rules1"
	    android:textColor="@color/darkgray"
	    android:textSize="14dip"
	    android:layout_marginLeft="20dip"
	    android:padding="10dip"/>
	<TextView style="@style/layout_wrap"
	    android:text="@string/str_rules2"
	    android:textColor="@color/darkgray"
	    android:textSize="14dip"
	    android:layout_marginLeft="20dip"
	    android:padding="10dip"/>
	<TextView style="@style/layout_wrap"
	    android:text="@string/str_rules3"
	    android:textColor="@color/darkgray"
	    android:textSize="14dip"
	    android:layout_marginLeft="20dip"
	    android:padding="10dip"/>
    
	
	<LinearLayout style="@style/layout_wrap"
	    android:layout_gravity="center"
	    android:id="@+id/layout_prize">
	    <com.jimome.mm.view.GuaGuaLeView 
	    android:layout_marginTop="20dip"
	    android:gravity="center"
	    android:layout_width="235dip"
        android:layout_height="60dip"
	    android:id="@+id/tv_prize"
	    android:layout_gravity="center"
        android:textColor="@color/red"/>
	    </LinearLayout>
	
</LinearLayout>
