<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_whitetext"
    android:orientation="vertical" >
    
    
    <LinearLayout
	     android:layout_width="300dip"
	     android:layout_height="fill_parent"
	     android:orientation="vertical" >
	    
        <TextView
            android:id="@+id/tv_dialog_tip"
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:gravity="center"
            android:text="@string/str_version_title"
            android:textColor="@color/white"
            android:background="@drawable/title_bg" />
        
        
        <TextView style="@style/layout_full_wrap"
            android:id="@+id/tv_version"
            android:gravity="center"
            android:text="@string/str_version_currentversion"
            android:padding="20dip"
            android:textColor="@color/input_text"/>
        
        
        <LinearLayout 
            style="@style/layout_full_wrap"
            android:padding="20dip">

            <Button 
                android:id="@+id/btn_version_sure"
                android:layout_width="fill_parent"
                android:layout_height="35.799988dip"
                android:layout_weight="1.0"
                android:text="@string/str_sure"
                android:textColor="@color/white"
                android:background="#ff0000"/>

            <Button 
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="35.799988dip"
                android:layout_weight="1.0"
                android:layout_marginLeft="10dip"
                android:text="@string/str_cancel"
                android:textColor="@color/white"
                 android:background="@drawable/btn_register_selector" />
        </LinearLayout>
        
       </LinearLayout> 

</LinearLayout>