<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@drawable/shape_whitetext"
    >
    
    <LinearLayout
	     android:layout_width="300dip"
	     android:layout_height="fill_parent"
	     android:orientation="vertical"
	 >
	     
	     <TextView
            android:layout_width="fill_parent"
            android:layout_height="40dip"
            android:gravity="center"
            android:text="@string/str_changepwd"
            android:textColor="@color/white"
            android:background="@drawable/title_bg" />
	     
	     <TextView style="@style/layout_full_wrap"
	         android:text="@string/str_changepwd_old"
	         android:textColor="@color/black"
	         android:paddingLeft="10dip"
			 android:paddingRight="10dip"
	         android:layout_marginTop="20dip"/>
	     
	     <EditText
                android:id="@+id/ed_oldpwd"
                style="@style/layout_full_wrap"
                android:background="@drawable/input_bg"
                android:paddingBottom="7.5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="7.5dip"
                android:singleLine="true"
                android:layout_marginTop="20dip"
                android:textColor="@color/input_text"
                android:textColorHint="@color/input_hint_text"
                android:focusable="false"
                android:textSize="16dip" />
	     
	     <TextView style="@style/layout_full_wrap"
	         android:text="@string/str_changepwd_new"
	         android:textColor="@color/black"
	         android:paddingLeft="10dip"
			 android:paddingRight="10dip"
	         android:layout_marginTop="20dip"/>
	     
	     <EditText
                android:id="@+id/ed_newpwd"
                style="@style/layout_full_wrap"
                android:background="@drawable/input_bg"
                android:hint="@string/str_login_password_hint"
                android:paddingBottom="7.5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="7.5dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:singleLine="true"
                android:layout_marginTop="20dip"
                android:textColor="@color/input_text"
                android:textColorHint="@color/input_hint_text"
                android:textSize="16dip" />
        
	     
	     <LinearLayout
            style="@style/layout_full_wrap"
            android:layout_marginTop="15dip"
            android:layout_marginBottom="16.5dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" 
            android:paddingLeft="10dip"
			android:paddingRight="10dip">

	        <Button
                android:id="@+id/btn_change"
                android:layout_width="fill_parent"
                android:layout_height="37.799988dip"
                android:layout_weight="1.0"
                android:background="#ff0000"
                android:text="@string/str_change"
                android:textColor="@color/white"
                android:textSize="16dip" />
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="fill_parent"
                android:layout_height="37.799988dip"
                android:layout_weight="1.0"
                android:layout_marginLeft="6.899994dip"
                android:background="@drawable/btn_register_selector"
                android:text="@string/str_cancel"
                android:textColor="#ffffffff"
                android:textSize="16dip" />

            
        </LinearLayout>
	 </LinearLayout>

</LinearLayout>