<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgray"
    android:orientation="vertical" >

    <include
        android:id="@+id/toplayout"
        layout="@layout/basic_top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dip"
        android:padding="10dip"
        android:text="@string/str_condition"
        android:textColor="@color/darkgray"
        android:textSize="18dip" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dip"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_recommend_address"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/str_address"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_recommend_age"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/str_age"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_recommend_height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/str_height"
            android:textColor="@color/black" />

        <View
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_recommend_salary"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:singleLine="true"
            android:text="@string/str_salary"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/gray" />

    <com.jimome.mm.view.PullScrollView
        android:id="@+id/pushscroll_lv"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:scrollbars="none"
        android:visibility="gone" />

   

</LinearLayout>