<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:background="@color/white" 
    		android:orientation="vertical"
    		android:paddingLeft="5dip"
    		android:paddingRight="5dip" >
         <ImageView
            android:id="@+id/img_close"
            android:layout_width="25dip"
            android:layout_height="25dip"
            android:padding="5dip"
            android:layout_gravity="right"
            android:visibility="gone"
            android:src="@drawable/user_close" />
    
         <TextView style="@style/layout_full_wrap"
             android:gravity="center"
             android:layout_marginTop="10dip"
             android:text="@string/str_pay_warningtitle"
              android:textColor="@color/black"
              android:textSize="16dip"
              android:textStyle="bold"/>
    <TextView style="@style/layout_full_wrap"
        android:layout_marginTop="10dip"
        android:text="@string/str_pay_warningtext"
        android:textColor="@color/black"
        android:id="@+id/tv_pop_msg"
        android:textSize="12dip"
        />
    
    
    <Button android:layout_width="match_parent"
        android:layout_height="40dip"
        android:id="@+id/btn_ok"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:background="@drawable/shape_red"
        android:text="@string/str_press_warning"
        android:textColor="#ffff00"
        android:textStyle="bold"/>
    </LinearLayout>
   

</LinearLayout>