<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="10dip" >

    <ImageView
        android:id="@+id/img_exchange_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/default_female" />

    <TextView
        android:id="@+id/tv_exchange_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip"
        android:text="iphone6 plus"
        android:textColor="@color/black"
        android:textSize="15dip" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_meili_cankao"
            android:textColor="@color/darkgray"
            android:textSize="15dip" />

        <TextView
            android:id="@+id/tv_exchange_cankao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥6288"
            android:textColor="@color/darkgray"
            android:textSize="15dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_meili_dui"
            android:textColor="@color/black"
            android:textSize="15dip" />

        <TextView
            android:id="@+id/tv_meili_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60000000魅力"
            android:textColor="#ff0000"
            android:textSize="15dip" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:text="@string/str_meili_num"
            android:textColor="@color/black"
            android:textSize="15dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_meili_sum"
            android:textColor="@color/black"
            android:textSize="15dip" />

        <TextView
            android:id="@+id/tv_exchange_dui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="60000000魅力"
            android:textColor="@color/black"
            android:textSize="15dip" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:background="#ff0000"
        android:padding="10dip"
        android:text="@string/str_meili_sure"
        android:textColor="@color/white"
        android:textSize="15dip" />

</LinearLayout>